@@ -430,6 +430,7 @@ class Config:
     self.options.show_log_in_markup = 1
     self.options.cross_copies = 1
     self.options.use_localtime = 0
+    self.options.iso8601_timestamps = 0
     self.options.short_log_len = 80
     self.options.enable_syntax_coloration = 1
     self.options.tabsize = 8
